# wgpu-model-render

./: Cargo.toml  README.md
src/: camera.rs  lib.rs  model.rs  resources.rs  shader.wgsl
src/pass/: phong.rs
